--- a/portfolio.html
+++ b/portfolio.html
@@ -833,7 +833,7 @@
             <ul class="footer-address__list list">
               <li class="footer-address__item">
                 <a
-                  class="footer-address__contact link"
+                  class="footer-address__contact footer-address__contact_white link"
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -906,6 +906,7 @@
             </li>
           </ul>
         </div>
+
         <div class="footer-subscription">
           <p class="footer__title">Підпишіться на розсилку</p>
           <form class="subsription-form">
