--- a/index.html
+++ b/index.html
@@ -99,10 +99,14 @@
 
           <ul class="mobile-menu__list list">
             <li class="mobile-menu__item">
-              <a href="#" class="mobile-menu__link link current">Студія</a>
+              <a href="./index.html" class="mobile-menu__link link current"
+                >Студія</a
+              >
             </li>
             <li class="mobile-menu__item">
-              <a href="#" class="mobile-menu__link link">Портфоліо</a>
+              <a href="./portfolio.html" class="mobile-menu__link link"
+                >Портфоліо</a
+              >
             </li>
             <li class="mobile-menu__item">
               <a href="#" class="mobile-menu__link link">Контакти</a>
