--- a/portfolio.html
+++ b/portfolio.html
@@ -95,10 +95,12 @@
 
           <ul class="mobile-menu__list list">
             <li class="mobile-menu__item">
-              <a href="#" class="mobile-menu__link link current">Студія</a>
+              <a href="./index.html" class="mobile-menu__link link">Студія</a>
             </li>
             <li class="mobile-menu__item">
-              <a href="#" class="mobile-menu__link link">Портфоліо</a>
+              <a href="./portfolio.html" class="mobile-menu__link link current"
+                >Портфоліо</a
+              >
             </li>
             <li class="mobile-menu__item">
               <a href="#" class="mobile-menu__link link">Контакти</a>
@@ -933,5 +935,7 @@
         </div>
       </div>
     </footer>
+    <!-- scripts -->
+    <script src="./js/mob-menu.js"></script>
   </body>
 </html>
